# aromatika

./: README.md  main.py
backend/: pyproject.toml
backend/config/: firebaseConfig.json
config/: serviceAccountKey.json
frontend/: .firebaserc  firebase.js  index.html  package-lock.json  script.js
