[tool.poetry]
name = "Aromatika"
version = "0.1.0"
description = "Get satisfied coffee tastes step-by-step!"
authors = ["seongtaek <hongseongtaek@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
